--- a/templates/cadastro_produtos.html
+++ b/templates/cadastro_produtos.html
@@ -51,6 +51,9 @@
             <label for="preco">Preço:</label>
             <input type="number" step="0.01" id="preco" name="preco" required>
 
+            <label for="categoria">Categoria do Produto:</label>
+            <input type="text" id="categoria" name="categoria" required>
+
             <label for="imagem">Imagem do Produto:</label>
             <input type="file" id="imagem" name="imagem" accept="image/*" required>
 
