--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,14 @@
             width: 100%;
             height: 180px;
         }
+
+        menu{
+            background-color: red;
+            color: yellow;
+            text-align: center;
+            font-weight: bold;
+            border-radius: 10px;
+        }
         .login-button {
             margin-top: 20px;
         }
@@ -29,14 +37,10 @@
 
 <!-- BANNER -->
 <div class="banner">
-    <nav class="d-flex justify-content-end p-3">
-      <a href="{{ url_for('login') }}" class="btn  btn-light btn-lg login-button">Peça já o seu</a>
-    </nav>
+
 </div>
-<div class="menu">
-    <nav class="d-flex justify-content-end p-3">
+<div class="menu">s   
     <a href="{{ url_for('login') }}" class="btn  btn-light btn-lg login-button">Peça já o seu</a>
-    </nav>
 </div>
 
 <!-- CARROSSEL DE PRODUTOS -->
