--- a/templates/cadastro_produtos.html
+++ b/templates/cadastro_produtos.html
@@ -52,8 +52,12 @@
             <input type="number" step="0.01" id="preco" name="preco" required>
 
             <label for="categoria">Categoria do Produto:</label>
-            <input type="text" id="categoria" name="categoria" required>
-
+            <select id="categoria_id" name="categoria_id" required>
+            {% for categoria in categorias %}
+            <option value="{{ categoria.id }}">{{ categoria.nome }}</option>
+            {% endfor %}
+            </select>
+            <br><br>
             <label for="imagem">Imagem do Produto:</label>
             <input type="file" id="imagem" name="imagem" accept="image/*" required>
 
