--- a/templates/index.html
+++ b/templates/index.html
@@ -105,6 +105,41 @@
     </div>
 </div>
 
+<!-- Menu horizontal de categorias -->
+<ul class="nav nav-tabs mb-4" id="categoriaTabs" role="tablist">
+    {% for categoria in categorias %}
+    <li class="nav-item" role="presentation">
+      <button class="nav-link {% if loop.first %}active{% endif %}" id="tab-{{ categoria.id }}" data-bs-toggle="tab"
+              data-bs-target="#categoria-{{ categoria.id }}" type="button" role="tab">
+        {{ categoria.nome }}
+      </button>
+    </li>
+    {% endfor %}
+  </ul>
+  
+  <!-- Conteúdo das abas -->
+  <div class="tab-content">
+    {% for categoria in categorias %}
+    <div class="tab-pane fade {% if loop.first %}show active{% endif %}" id="categoria-{{ categoria.id }}" role="tabpanel">
+      <div class="row">
+        {% for produto in categoria.produtos %}
+        <div class="col-md-4 mb-4">
+          <div class="card h-100">
+            <img src="{{ url_for('static', filename='images/' + produto.imagem) }}" class="card-img-top" alt="{{ produto.nome }}">
+            <div class="card-body">
+              <h5 class="card-title">{{ produto.nome }}</h5>
+              <p class="card-text">{{ produto.descricao }}</p>
+              <p><strong>R$ {{ produto.preco }}</strong></p>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+    {% endfor %}
+  </div>       
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
